# template-poc-with-apis

./: README.md  pyproject.toml  repository-index.json  run.py
app/: config.py  main.py
app/routes/: api.py
frontend/static/js/: app.js
frontend/templates/: base.html
frontend/templates/components/: cost_analysis.html  formula_card.html  formula_detail.html  pricing_search_results.html  search_results.html
frontend/templates/pages/: formulas.html  index.html  microservices.html  pricing.html  proposals.html
